Создан проект backend, разработано приложение с интерфейсом командной строки (CLI). Приложение помогает наполнить базу данных начальными данными. С её помощью можно создать сколько угодно тестовых наборов.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,29 +1,22 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "module": "commonjs",
     "declaration": true,
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "importHelpers": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "emitDecoratorMetadata": true,
-    "paths": {
-      "@mishkaBoard/core": ["libs/core/src/index.ts"],
-      "@mishkaBoard/shared-types": ["libs/shared-types/src/index.ts"]
-    },
+    "baseUrl": "./",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false,
     "types": [
       "node",
     ],
