--- a/backend/cli-app/package.json
+++ b/backend/cli-app/package.json
@@ -23,43 +23,16 @@
     "mock:server": "json-server mocks/mock-server-data.json --port 3123"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "10.1.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "7.0.10",
-    "bcrypt": "^5.1.0",
     "chalk": "5.2.0",
-    "class-transformer": "0.5.1",
-    "class-validator": "0.14.0",
     "dayjs": "1.11.8",
-    "got": "12.5.3",
-    "passport-jwt": "4.0.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "got": "12.5.3"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/bcrypt": "5.0.0",
-    "@types/express": "^4.17.17",
-    "@types/jest": "29.5.1",
-    "@types/node": "^20.3.1",
-    "@types/passport-jwt": "3.0.8",
+    "@types/node": "20.3.2",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
     "json-server": "0.17.3",
-    "prettier": "^2.8.8",
     "rimraf": "5.0.1",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
@@ -81,5 +54,6 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "type": "module"
 }
