--- a/backend/package.json
+++ b/backend/package.json
@@ -24,16 +24,17 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "10.1.0",
+    "@nestjs/mongoose": "10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "7.0.10",
     "bcrypt": "^5.1.0",
-    "chalk": "5.2.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "dayjs": "1.11.8",
-    "got": "12.5.3",
+    "mongoose": "7.3.1",
     "passport-jwt": "4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -54,7 +55,6 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
-    "json-server": "0.17.3",
     "prettier": "^2.8.8",
     "rimraf": "5.0.1",
     "source-map-support": "^0.5.21",
