--- a/backend/environments/.env-example
+++ b/backend/environments/.env-example
@@ -4,3 +4,7 @@ MONGO_PORT=27017
 MONGO_USER=admin
 MONGO_PASSWORD=123456
 MONGO_AUTH_BASE=admin
+JWT_AT_SECRET = secret
+JWT_AT_EXPIRES_IN = 60s
+JWT_RT_SECRET = refreshSecret
+JWT_RT_EXPIRES_IN = 600s
