--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "class-validator": "0.14.0",
     "dayjs": "1.11.8",
     "mongoose": "7.3.1",
+    "nanoid": "4.0.2",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
@@ -49,6 +50,7 @@
     "@types/bcrypt": "5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.1",
+    "@types/multer": "1.4.7",
     "@types/node": "^20.3.1",
     "@types/passport": "1.0.12",
     "@types/passport-jwt": "3.0.8",
