--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ticket-sales2022",
+  "name": "mishkaBoard",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "dayjs": "1.11.9",
     "primeng": "^14.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
